--- a/index.html
+++ b/index.html
@@ -5,13 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abushaid Sheik Profile</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-    <H1> Hay i Am Abushaid</H1>
-    <h1>May Mama Ami Bari Jabo Naa </h1>
-    <h2> Hay Mama Ami Pream Korbo nAaa</h2>
-    <p>Amr Sonar bANgla Ami tomy Valobasi</p>
+    
+<section>
+<div class="half-one">
+    <H1> Welcome To</H1>
+    <h1> <span class="name-color">Abushaid's</span>  World </h1>
+    <h3 id="professional"> Professional Web Developer </h3>
+    <p> Hay i am <strong>Abushaid Sheik</strong> , i am learning a web develop, I develop Biggapn.Com is a Free and Paid Advertising Marketplace. We Provide Advertising Support for your Business & Product. If need any Help Please Contact Us.</p>
+</div>
+  
+<div class="half-one">
+<img src="image/image2.png" alt="">
 
+</div>
+
+
+</section>
 
 
 </body>
