2nd section add

--- a/index.html
+++ b/index.html
@@ -32,6 +32,21 @@
 
 </section>
 
+<section class="image-newtop">
+    <div class="half-one">
+        <img src="image/image2.png" alt="">
+    </div>
+
+    <div class="half-one">
+        <h1 class="dream-big"> DREAM BIG</h1>
+        <h3> Became a Web Developer</h3>
+        <p> Hay i am <strong>Abushaid Sheik</strong>, i want to be a progrimg Hero, i will protect my country from hackers. who againest our counrry. thank u. </p>
+        <a class="new-link" target="_blank" href="https://www.linkedin.com/in/abushaidfax/"> Download My CV</a>
+    </div>
+</section>
+
+
+
 
 </body>
 </html>
