--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@
     </div>
 </section>
 
+<section class="third-section">
+    <h1 class="my-experience">My Experience</h1>
+    <div id="baby-dev" class="half-one same-web">
+        <h2>Baby Web Dewveloper</h2>
+        <h3 class="name-color">Present Working | 2021 in a Company</h3>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+    </div>
+
+    <div class="half-one same-web">
+        <h2>Pro Web Developer</h2>
+        <h3 class="name-color"> Past Learning | 2020-2021 in Programing Hero</h3>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+    </div>
+</section>
+
 
 
 
